--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
             <img src="" alt="costilla">
             <img src="" alt="decoracion">
         </div>
+        <div class="redes">
+            
+        </div>
     </section>
         <section>
         <div>
             <img src="" alt="Chow mein">
         </div>
-        <div>
+        <div class="redes">
             
         </div>
     </section>
