estilo del menu

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="menu">
             <ul>
-                <li>Menu</li>
-                <li>contacto</li>
-                <li>ubicacion</li>
+                <li>MENU</li>
+                <li>CONTACTO</li>
+                <li>UBICACIÓN</li>
             </ul>
-        </nav>
-    </header>
+    </nav>
+</header>
     <section>
         <div>
             <img src="" alt="Pato pekin">
@@ -52,7 +52,7 @@
             <img src="" alt="decoracion">
         </div>
         <div class="redes">
-            
+
         </div>
     </section>
         <section>
