--- a/index.html
+++ b/index.html
@@ -3,68 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Descripción breve de la página web.">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Tu Nombre o Empresa">
-  <meta name="keywords" content="palabra1, palabra2, palabra3">
-  <meta name="theme-color" content="#ffffff">
-  <meta property="og:title" content="Título para compartir en redes sociales">
-  <meta property="og:description" content="Descripción que aparece al compartir el enlace">
-  <meta property="og:image" content="https://example.com/imagen.jpg">
-  <meta property="og:url" content="https://example.com">
-  <meta property="og:type" content="website">
-
-  <title>Título de la página</title>
-
-  <link rel="stylesheet" href="normalize.css" />
-  <link rel="stylesheet" href="estilo.css" />
-  <script src="modernizr-custom.js"></script>
+  <title>Golden Dragon</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li>MENU</li>
-                <li>CONTACTO</li>
-                <li>UBICACIÓN</li>
-            </ul>
-    </nav>
-</header>
-    <section>
-        <div>
-            <img src="" alt="Pato pekin">
-            <img src="" alt="decoracion">
-            <img src="" alt="pato pekin">
-        </div>
-    </section>
-    <section>
-        <div>
-            <img src="" alt="cerdo agridulce">
-            <img src="" alt="decoracion">
-            <img src="" alt="cerdo agridulce">
-            <img src="" alt="pollo gon bao">
-            <img src="" alt="mapo totu">
-        </div>
-    </section>
-    <section>
-        <div>
-            <img src="" alt="costilla">
-            <img src="" alt="decoracion">
-        </div>
-        <div class="redes">
 
+  <nav class="menu">
+    <ul>
+      <li>MENU</li>
+      <li>CONTACTO</li>
+      <li>UBICACIÓN</li>
+    </ul>
+  </nav>
+
+  <section class="contenedor">
+
+    <div class="columna-izquierda">
+
+      <div class="bloque-pato">
+        <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
+        <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
+        <h2>PATO PEKIN</h2>
+        <p>Pato asado con piel crujiente, servido con crepes, cebollín y salsa hoisin.</p>
+      </div>
+
+      <div class="bloque-orden">
+        <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp" alt="Costilla">
+        <h2>ORDENA HOY</h2>
+        <p>Armenia cl 14 - 32</p>
+        <button class="boton">ORDENA YA</button>
+      </div>
+
+    </div>
+
+    <div class="columna-derecha">
+
+      <div class="bloque-principal">
+        <img class="img-grande" src="https://media.discordapp.net/attachments/785301561747439676/1400768931970682922/cerdo.webp?ex=688dd73a&is=688c85ba&hm=df5f67a4f40bcf152a84260593ade7e895d68cd55fef89974321c2dd520c73ce&=&format=webp" alt="Pollo agridulce">
+        <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
+        <div class="texto-central">
+          <h1>GOLDEN DRAGON</h1>
+          <p>COMIDA CHINA</p>
+          <button class="boton">ORDENA YA</button>
         </div>
-    </section>
-        <section>
-        <div>
-            <img src="" alt="Chow mein">
+      </div>
+
+      <div class="bloque-menu">
+        <div class="item">
+          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768931685339136/cerdo_2.webp?ex=688dd73a&is=688c85ba&hm=1830e08f8cb1bfa9c01da2e58a4660ada9bcaa00554772a77008c175b9e811ea&=&format=webp" alt="Cerdo agridulce">
+          <h4>Cerdo agridulce</h4>
+          <p>Tiras de cerdo fritas en salsa agridulce.</p>
         </div>
-        <div class="redes">
-            
+        <div class="item">
+          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932767465523/el_de_la_olla.webp?ex=688dd73a&is=688c85ba&hm=0aad4b481254a59e131f006252a9c2a02150c0a313d91b5c4d8d5e581c9e2f2d&=&format=webp" alt="Pollo Gong Bao">
+          <h4>Pollo Gong Bao</h4>
+          <p>Pollo salteado con maní, chiles secos y verduras.</p>
         </div>
-    </section>
-    <footer>
-        <p><small>&copy; 2025</small></p>
-    </footer>
+        <div class="item">
+          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768934688456796/ultimo_plato.webp?ex=688dd73b&is=688c85bb&hm=78b36666ab97b60b93a388eac216b5bd8ec74a4e73f5ecb88e87e0681959d14d&=&format=webp" alt="Mapo tofu">
+          <h4>Mapo tofu</h4>
+          <p>Tofu en salsa picante con carne molida, típico de Sichuan.</p>
+        </div>
+      </div>
+
+      <div class="bloque-horario">
+        <h3>HORARIO</h3>
+        <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
+        <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
+      </div>
+
+    </div>
+
+  </section>
 </body>
 </html>
