--- a/index.html
+++ b/index.html
@@ -20,61 +20,53 @@
   <section class="contenedor">
 
     <div class="columna-izquierda">
-
       <div class="bloque-pato">
         <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
         <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
         <h2>PATO PEKIN</h2>
         <p>Pato asado con piel crujiente, servido con crepes, cebollín y salsa hoisin.</p>
-      </div>
-
-      <div class="bloque-orden">
         <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp" alt="Costilla">
         <h2>ORDENA HOY</h2>
         <p>Armenia cl 14 - 32</p>
         <button class="boton">ORDENA YA</button>
       </div>
-
     </div>
 
     <div class="columna-derecha">
-
       <div class="bloque-principal">
-        <img class="img-grande" src="https://media.discordapp.net/attachments/785301561747439676/1400768931970682922/cerdo.webp?ex=688dd73a&is=688c85ba&hm=df5f67a4f40bcf152a84260593ade7e895d68cd55fef89974321c2dd520c73ce&=&format=webp" alt="Pollo agridulce">
+        <img class="img-grande" src="https://media.discordapp.net/attachments/785301561747439676/1400768931970682922/cerdo.webp?ex=688dd73a&is=688c85ba&hm=df5f67a4f40bcf152a84260593ade7e895d68cd55fef89974321c2dd520c73ce&=&format=webp" alt="Cerdo agridulce preparado">
         <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
         <div class="texto-central">
           <h1>GOLDEN DRAGON</h1>
           <p>COMIDA CHINA</p>
           <button class="boton">ORDENA YA</button>
         </div>
-      </div>
-
-      <div class="bloque-menu">
-        <div class="item">
-          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768931685339136/cerdo_2.webp?ex=688dd73a&is=688c85ba&hm=1830e08f8cb1bfa9c01da2e58a4660ada9bcaa00554772a77008c175b9e811ea&=&format=webp" alt="Cerdo agridulce">
-          <h4>Cerdo agridulce</h4>
-          <p>Tiras de cerdo fritas en salsa agridulce.</p>
-        </div>
-        <div class="item">
-          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932767465523/el_de_la_olla.webp?ex=688dd73a&is=688c85ba&hm=0aad4b481254a59e131f006252a9c2a02150c0a313d91b5c4d8d5e581c9e2f2d&=&format=webp" alt="Pollo Gong Bao">
-          <h4>Pollo Gong Bao</h4>
-          <p>Pollo salteado con maní, chiles secos y verduras.</p>
-        </div>
-        <div class="item">
-          <img src="https://media.discordapp.net/attachments/785301561747439676/1400768934688456796/ultimo_plato.webp?ex=688dd73b&is=688c85bb&hm=78b36666ab97b60b93a388eac216b5bd8ec74a4e73f5ecb88e87e0681959d14d&=&format=webp" alt="Mapo tofu">
-          <h4>Mapo tofu</h4>
-          <p>Tofu en salsa picante con carne molida, típico de Sichuan.</p>
-        </div>
+        <div class="contenedor">
+          <div class="item">
+            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768931685339136/cerdo_2.webp?ex=688dd73a&is=688c85ba&hm=1830e08f8cb1bfa9c01da2e58a4660ada9bcaa00554772a77008c175b9e811ea&=&format=webp" alt="Cerdo agridulce">
+            <h4>Cerdo agridulce</h4>
+            <p>Tiras de cerdo fritas en salsa agridulce.</p>
+          </div>
+          <div class="item">
+            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932767465523/el_de_la_olla.webp?ex=688dd73a&is=688c85ba&hm=0aad4b481254a59e131f006252a9c2a02150c0a313d91b5c4d8d5e581c9e2f2d&=&format=webp" alt="Pollo Gong Bao">
+            <h4>Pollo Gong Bao</h4>
+            <p>Pollo salteado con maní, chiles secos y verduras.</p>
+          </div>
+          <div class="item">
+            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768934688456796/ultimo_plato.webp?ex=688dd73b&is=688c85bb&hm=78b36666ab97b60b93a388eac216b5bd8ec74a4e73f5ecb88e87e0681959d14d&=&format=webp" alt="Mapo tofu">
+            <h4>Mapo tofu</h4>
+            <p>Tofu en salsa picante con carne molida, típico de Sichuan.</p>
+          </div>
+          </div>
       </div>
 
       <div class="bloque-horario">
         <h3>HORARIO</h3>
+        <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932994093088/espeguettisraros.webp?ex=688dd73a&is=688c85ba&hm=cdc597bdaca61d49492ceeb0f5bd05f723a4c61f3c92c334016f5c02697c55e7&=&format=webp" alt="chow mein">
         <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
         <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
       </div>
-
     </div>
-
   </section>
 </body>
 </html>
