se arreglo el bloque izquierdo, zona pato pekin

--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
       <div class="bloque-pato">
         <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
         <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
-        <h2>PATO PEKIN</h2>
-        <p>Pato asado con piel crujiente, servido con crepes, cebollín y salsa hoisin.</p>
+        <div class="patopekin">
+          <div class="textopato">
+            <h2 class="patotitulo">PATO PEKIN</h2>
+            <p>Pato asado con piel crujiente, servido con crepes, cebollín y salsa hoisin.</p>
+          </div>
+          <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
+        </div>
         <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp" alt="Costilla">
         <h2>ORDENA HOY</h2>
         <p>Armenia cl 14 - 32</p>
