se arreglan las nubes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
         <div class="patopekin">
           <div class="textopato">
-            <h2 class="patotitulo">PATO PEKIN</h2>
+            <h2>PATO PEKIN</h2>
             <p>Pato asado con piel crujiente, servido con crepes, cebollín y salsa hoisin.</p>
           </div>
           <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
@@ -36,16 +36,15 @@
         <button class="boton">ORDENA YA</button>
       </div>
     </div>
-
+    <div class="texto-central">
+      <h1>GOLDEN DRAGON</h1>
+      <p>COMIDA CHINA</p>
+       <button class="boton">ORDENA YA</button>
+    </div>
     <div class="columna-derecha">
       <div class="bloque-principal">
         <img class="img-grande" src="https://media.discordapp.net/attachments/785301561747439676/1400768931970682922/cerdo.webp?ex=688dd73a&is=688c85ba&hm=df5f67a4f40bcf152a84260593ade7e895d68cd55fef89974321c2dd520c73ce&=&format=webp" alt="Cerdo agridulce preparado">
-        <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
-        <div class="texto-central">
-          <h1>GOLDEN DRAGON</h1>
-          <p>COMIDA CHINA</p>
-          <button class="boton">ORDENA YA</button>
-        </div>
+        <img class="nube-derecha" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
         <div class="contenedor">
           <div class="item">
             <img src="https://media.discordapp.net/attachments/785301561747439676/1400768931685339136/cerdo_2.webp?ex=688dd73a&is=688c85ba&hm=1830e08f8cb1bfa9c01da2e58a4660ada9bcaa00554772a77008c175b9e811ea&=&format=webp" alt="Cerdo agridulce">
