se corrige el modulo izquierdo, se agrega el mapa

--- a/index.html
+++ b/index.html
@@ -30,10 +30,23 @@
           </div>
           <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
         </div>
-        <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932343713833/costilla.webp?ex=688dd73a&is=688c85ba&hm=f9bb8f5561b94f0ca306de11c8be8026ba035bd0e85df7c440deb3bf2db0a8bc&=&format=webp" alt="Costilla">
-        <h2>ORDENA HOY</h2>
-        <p>Armenia cl 14 - 32</p>
-        <button class="boton">ORDENA YA</button>
+        <div class="ubicacion">
+          <div class="fondoblanco">
+            <div class="ordenahoy">
+              <h2>ORDENA HOY</h2>
+              <button class="boton">ORDENA YA</button>
+            </div>
+            <div class="mapa">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31817.70944067243!2d-75.71331025109868!3d4.555548759399567!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f4fb28c8167d%3A0xdefb5dbeabd33780!2sCasa%20China!5e0!3m2!1ses-419!2sco!4v1754117763734!5m2!1ses-419!2sco"
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+              <p>Cra. 14, Armenia, Quindío</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
       </div>
     </div>
     <div class="texto-central">
