rediseñado modulo final

--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
       <div class="bloque-horario">
         <h3>HORARIO</h3>
         <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932994093088/espeguettisraros.webp?ex=688dd73a&is=688c85ba&hm=cdc597bdaca61d49492ceeb0f5bd05f723a4c61f3c92c334016f5c02697c55e7&=&format=webp" alt="chow mein">
-        <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
-        <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
+        <div>
+          <hr>
+          <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
+          <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
+          <hr>
+        </div>
       </div>
     </div>
   </section>
