arreglo de imagenes rotas

--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
     </div>
     <div class="columna-derecha">
       <div class="bloque-principal">
-        <img class="img-grande" src="https://media.discordapp.net/attachments/785301561747439676/1400768931970682922/cerdo.webp?ex=688dd73a&is=688c85ba&hm=df5f67a4f40bcf152a84260593ade7e895d68cd55fef89974321c2dd520c73ce&=&format=webp" alt="Cerdo agridulce preparado">
+        <img class="img-grande" src="https://i.postimg.cc/26rwr2ym/cerdo.webp" alt="Cerdo agridulce preparado">
         <img class="nube-derecha" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
         <div class="contenedor">
           <div class="item">
-            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768931685339136/cerdo_2.webp?ex=688dd73a&is=688c85ba&hm=1830e08f8cb1bfa9c01da2e58a4660ada9bcaa00554772a77008c175b9e811ea&=&format=webp" alt="Cerdo agridulce">
+            <img src="https://i.postimg.cc/XqDcKW87/cerdo-2.webp" alt="Cerdo agridulce">
             <h4>Cerdo agridulce</h4>
             <p>Tiras de cerdo fritas en salsa agridulce.</p>
           </div>
           <div class="item">
-            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932767465523/el_de_la_olla.webp?ex=688dd73a&is=688c85ba&hm=0aad4b481254a59e131f006252a9c2a02150c0a313d91b5c4d8d5e581c9e2f2d&=&format=webp" alt="Pollo Gong Bao">
+            <img src="https://i.postimg.cc/0NqG0cpm/el-de-la-olla.webp" alt="Pollo Gong Bao">
             <h4>Pollo Gong Bao</h4>
             <p>Pollo salteado con maní, chiles secos y verduras.</p>
           </div>
           <div class="item">
-            <img src="https://media.discordapp.net/attachments/785301561747439676/1400768934688456796/ultimo_plato.webp?ex=688dd73b&is=688c85bb&hm=78b36666ab97b60b93a388eac216b5bd8ec74a4e73f5ecb88e87e0681959d14d&=&format=webp" alt="Mapo tofu">
+            <img src="https://i.postimg.cc/zvD0S0Yp/ultimo-plato.webp" alt="Mapo tofu">
             <h4>Mapo tofu</h4>
             <p>Tofu en salsa picante con carne molida, típico de Sichuan.</p>
           </div>
@@ -79,7 +79,7 @@
 
       <div class="bloque-horario">
         <h3>HORARIO</h3>
-        <img src="https://media.discordapp.net/attachments/785301561747439676/1400768932994093088/espeguettisraros.webp?ex=688dd73a&is=688c85ba&hm=cdc597bdaca61d49492ceeb0f5bd05f723a4c61f3c92c334016f5c02697c55e7&=&format=webp" alt="chow mein">
+        <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein">
         <div>
           <hr>
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
