--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="columna-izquierda">
       <div class="bloque-pato">
         <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
-        <img class="nube" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
+        <img class="nube" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración">
         <div class="patopekin">
           <div class="textopato">
             <h2>PATO PEKIN</h2>
@@ -57,7 +57,7 @@
     <div class="columna-derecha">
       <div class="bloque-principal">
         <img class="img-grande" src="https://i.postimg.cc/26rwr2ym/cerdo.webp" alt="Cerdo agridulce preparado">
-        <img class="nube-derecha" src="https://i.postimg.cc/K4S35z6N/nube.webp" alt="decoración">
+        <img class="nube-derecha" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración">
         <div class="contenedor">
           <div class="item">
             <img src="https://i.postimg.cc/XqDcKW87/cerdo-2.webp" alt="Cerdo agridulce">
