ultimo commit antes de los cambios grandes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="columna-izquierda">
       <div class="bloque-pato">
         <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
-        <img class="nube" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración">
+        <img class="nube" src="https://i.postimg.cc/tT8bpfgB/Mesa-de-trabajo-12.png" alt="decoración">
         <div class="patopekin">
           <div class="textopato">
             <h2>PATO PEKIN</h2>
