se arregla tamaño y titulos

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <h4>Mapo tofu</h4>
             <p>Tofu en salsa picante con carne molida, típico de Sichuan.</p>
           </div>
-          </div>
+        </div>
       </div>
 
       <div class="bloque-horario">
         <h3>HORARIO</h3>
         <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein">
-        <div>
+        <div class="horario">
           <hr>
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
           <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
