--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </nav>
 
   <section class="contenedor">
-
     <div class="columna-izquierda">
       <div class="bloque-pato">
         <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
@@ -79,7 +78,7 @@
 
       <div class="bloque-horario">
         <h3>HORARIO</h3>
-        <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein">
+        <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein" class="imagen izquierda">
         <div class="horario">
           <hr>
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
