--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
   </nav>
 
   <section class="contenedor">
+
     <div class="columna-izquierda">
       <div class="bloque-pato">
-        <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
-        <img class="nube" src="https://i.postimg.cc/tT8bpfgB/Mesa-de-trabajo-12.png" alt="decoración">
+        <div>
+          <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
+          <img class="nube" src="https://i.postimg.cc/tT8bpfgB/Mesa-de-trabajo-12.png" alt="decoración">
+        </div>
         <div class="patopekin">
           <div class="textopato">
             <h2>PATO PEKIN</h2>
@@ -29,6 +32,7 @@
           </div>
           <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
         </div>
+
         <div class="ubicacion">
           <div class="fondoblanco">
             <div class="ordenahoy">
@@ -46,17 +50,18 @@
         </div>
       </div>
     </div>
-      </div>
-    </div>
+
     <div class="texto-central">
       <h1>GOLDEN DRAGON</h1>
       <p>COMIDA CHINA</p>
-       <button class="boton">ORDENA YA</button>
+      <button class="boton">ORDENA YA</button>
     </div>
+
     <div class="columna-derecha">
       <div class="bloque-principal">
         <img class="img-grande" src="https://i.postimg.cc/26rwr2ym/cerdo.webp" alt="Cerdo agridulce preparado">
         <img class="nube-derecha" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración">
+
         <div class="contenedor">
           <div class="item">
             <img src="https://i.postimg.cc/XqDcKW87/cerdo-2.webp" alt="Cerdo agridulce">
@@ -77,9 +82,9 @@
       </div>
 
       <div class="bloque-horario">
-        <h3>HORARIO</h3>
-        <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein" class="imagen izquierda">
+        <img src="https://i.postimg.cc/QtfpsDvk/espeguettisraros.webp" alt="chow mein" class="imagenizquierda">
         <div class="horario">
+          <h3>HORARIO</h3>
           <hr>
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
           <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
@@ -87,6 +92,8 @@
         </div>
       </div>
     </div>
+
   </section>
+
 </body>
 </html>
