utimo ccambio antes de moverse a la rama correcionmodulos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="bloque-pato">
         <div>
           <img class="pato" src="https://i.postimg.cc/CK7f0cbj/pato.webp" alt="Pato Pekín">
-          <img class="nube" src="https://i.postimg.cc/tT8bpfgB/Mesa-de-trabajo-12.png" alt="decoración">
+          <!--<img class="nube" src="https://i.postimg.cc/tT8bpfgB/Mesa-de-trabajo-12.png" alt="decoración"> -->
         </div>
         <div class="patopekin">
           <div class="textopato">
@@ -60,7 +60,7 @@
     <div class="columna-derecha">
       <div class="bloque-principal">
         <img class="img-grande" src="https://i.postimg.cc/26rwr2ym/cerdo.webp" alt="Cerdo agridulce preparado">
-        <img class="nube-derecha" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración">
+        <!-- <img class="nube-derecha" src="https://i.postimg.cc/KcgHfsTp/nube.webp" alt="decoración"> -->
 
         <div class="contenedor">
           <div class="item">
