cambio en el menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="menu">
     <ul>
       <li><a href="menu.html" target="_blank" class="botonmenu">MENU</a></li>
-      <li><a href="#bloquehorario" target="_blank" class="botonmenu">CONTACTO</a></li>
+      <li><a href="buttom" class="botonmenu">CONTACTO</a></li>
       <li><a href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31817.70944067243!2d-75.71331025109868!3d4.555548759399567!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f4fb28c8167d%3A0xdefb5dbeabd33780!2sCasa%20China!5e0!3m2!1ses-419!2sco!4v1754117763734!5m2!1ses-419!2sco" target="_blank" class="botonmenu">UBICACIÓN</a></li>
     </ul>
   </nav>
