creacion de menu y lnk funcionales

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="fondoblanco">
             <div class="ordenahoy">
               <h2>ORDENA HOY</h2>
-              <button class="boton">ORDENA YA</button>
+              <a href="menu.html"><button class="boton">ORDENA YA</button></a>
             </div>
             <div class="mapa">
               <iframe
