insercion de menu en su primera etapa, adicion de footer y correcion de direcion del boton de ubicacion

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav class="menu">
     <ul>
       <li><a href="menu.html" target="_blank" class="botonmenu">MENU</a></li>
-      <li><a href="buttom" class="botonmenu">CONTACTO</a></li>
+      <li><a href="#contacto" class="botonmenu">CONTACTO</a></li>
       <li><a href="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31817.70944067243!2d-75.71331025109868!3d4.555548759399567!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e38f4fb28c8167d%3A0xdefb5dbeabd33780!2sCasa%20China!5e0!3m2!1ses-419!2sco!4v1754117763734!5m2!1ses-419!2sco" target="_blank" class="botonmenu">UBICACIÓN</a></li>
     </ul>
   </nav>
@@ -89,12 +89,15 @@
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
           <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
           <hr>
-          <p><strong> CONTACTANOS: 3002113456 </strong></p>
+          <p><strong> DOMICILIOS: 3002113456 </strong></p>
         </div>
       </div>
     </div>
-
   </section>
+
+  <footer id="contacto">
+  <p><small>&copy; Golden Dragon - Bogotá</small></p>
+</footer>
 
 </body>
 </html>
