--- a/menu.html
+++ b/menu.html
@@ -1,92 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>menu</title>
+  <title>Menú Golden Dragon</title>
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="estilomenu.css">
 </head>
 <body>
-    <header>
-        <hr>
-        <h1>Golden Dragon</h1>
-        <p>menu del dia</p>
-        <hr>
+  <main>
+    <header class="titulo">
+      <h1>Golden Dragon</h1>
+      <p>Comida China</p>
     </header>
-    <section>
-        <div class="arroz">
-            <div>
-                <h2>arroz</h2>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </div>
-            <div>
 
-            </div>
-        </div>
+    <div class="grid-secciones">
+      <!-- Columna izquierda -->
+      <div class="columna">
+        <section class="seccion">
+          <h2>Entradas</h2>
+          <ul class="lista-platos">
+            <li><span>Rollitos de primavera</span><span>$9.000</span></li>
+            <li><span>Dumplings fritos</span><span>$12.000</span></li>
+            <li><span>Sopa agripicante</span><span>$10.000</span></li>
+            <li><span>Wonton frito</span><span>$11.000</span></li>
+          </ul>
+        </section>
 
-        <div>
-            <div class="almuerzos">
-                <h2>almuerzos</h2>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </div>
-            <div>
+        <section class="seccion">
+          <h2>Platos Principales</h2>
+          <ul class="lista-platos">
+            <li><span>Pollo a la naranja</span><span>$28.000</span></li>
+            <li><span>Cerdo agridulce</span><span>$30.000</span></li>
+            <li><span>Res con brócoli</span><span>$33.000</span></li>
+            <li><span>Chop Suey</span><span>$26.000</span></li>
+          </ul>
+        </section>
 
-            </div>
-        </div>
+        <section class="seccion">
+          <h2>Acompañamientos</h2>
+          <ul class="lista-platos">
+            <li><span>Arroz frito</span><span>$10.000</span></li>
+            <li><span>Lo Mein</span><span>$11.000</span></li>
+            <li><span>Arroz blanco</span><span>$6.000</span></li>
+          </ul>
+        </section>
+      </div>
 
-        <div>
-            <div class="pastas">
-                <h2>pastas</h2>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </div>
-            <div>
+      <!-- Columna derecha -->
+      <div class="columna">
+        <section class="seccion">
+          <h2>Postres</h2>
+          <ul class="lista-platos">
+            <li><span>Helado de lichi</span><span>$9.000</span></li>
+            <li><span>Frutas caramelizadas</span><span>$7.500</span></li>
+            <li><span>Bolas de sésamo</span><span>$8.000</span></li>
+          </ul>
+        </section>
 
-            </div>
-        </div>
-    </section>
+        <section class="seccion">
+          <div class="fondorojo">
+            <h3>Número para domicilios</h3>
+            <h2>(+57) 300 211 3456</h2>
+          </div>
+        </section>
+      </div>
+    </div>
+
     <footer>
-        <h2>CONTACTANOS: 3002113456</h2>
-        <p><small>&copy; Golden Dragon</small></p>
+      <p><strong>Contáctanos:</strong> 300 211 3456</p>
+      <p><small>&copy; Golden Dragon - Bogotá</small></p>
     </footer>
+  </main>
 </body>
 </html>
