--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,8 @@
     </header>
 
     <div class="grid-secciones">
-      <!-- Columna izquierda -->
       <div class="columna">
-        <section class="seccion">
+        <section>
           <h2>Entradas</h2>
           <ul class="lista-platos">
             <li><span>Rollitos de primavera</span><span>$9.000</span></li>
@@ -27,7 +26,7 @@
           </ul>
         </section>
 
-        <section class="seccion">
+        <section>
           <h2>Platos Principales</h2>
           <ul class="lista-platos">
             <li><span>Pollo a la naranja</span><span>$28.000</span></li>
@@ -37,7 +36,7 @@
           </ul>
         </section>
 
-        <section class="seccion">
+        <section>
           <h2>Acompañamientos</h2>
           <ul class="lista-platos">
             <li><span>Arroz frito</span><span>$10.000</span></li>
@@ -46,8 +45,6 @@
           </ul>
         </section>
       </div>
-
-      <!-- Columna derecha -->
       <div class="columna">
         <section class="seccion">
           <h2>Postres</h2>
@@ -58,7 +55,7 @@
           </ul>
         </section>
 
-        <section class="seccion">
+        <section>
           <div class="fondorojo">
             <h3>Número para domicilios</h3>
             <h2>(+57) 300 211 3456</h2>
@@ -69,7 +66,7 @@
 
     <footer>
       <p><strong>Contáctanos:</strong> 300 211 3456</p>
-      <p><small>&copy; Golden Dragon - Bogotá</small></p>
+      <p><small>&copy; Golden Dragon - Armenia</small></p>
     </footer>
   </main>
 </body>
