cambio en el color del modulo de horario para dar mas visibilidad

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="fondoblanco">
             <div class="ordenahoy">
               <h2>ORDENA HOY</h2>
-              <a href="menu.html"><button class="boton">ORDENA YA</button></a>
+              <a href="menu.html" target="_blank"><button class="boton">ORDENA YA</button></a>
             </div>
             <div class="mapa">
               <iframe
@@ -54,7 +54,7 @@
     <div class="texto-central">
       <h1>GOLDEN DRAGON</h1>
       <p>COMIDA CHINA</p>
-      <button class="boton">ORDENA YA</button>
+      <a href="menu.html" target="_blank"><button class="boton">ORDENA YA</button></a>
     </div>
 
     <div class="columna-derecha">
@@ -89,14 +89,14 @@
           <p><strong>LUNES A VIERNES</strong> &nbsp;&nbsp; 8 am - 6 pm</p>
           <p><strong>SÁBADOS Y DOMINGOS</strong> &nbsp;&nbsp; 9 am - 5 pm</p>
           <hr>
-          <p><strong> DOMICILIOS: 3002113456 </strong></p>
+          <p class="marca"><strong> DOMICILIOS: 3002113456 </strong></p>
         </div>
       </div>
     </div>
   </section>
 
   <footer id="contacto">
-    <p><small>&copy; Golden Dragon - Bogotá</small></p>
+    <p><small>&copy; Golden Dragon - Armenia</small></p>
   </footer>
 
 </body>
